test/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: hello
spec:
  virtualhost:
    fqdn: hello-test.contour.sysco-pcf.sysco.corby.cc
